<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.singletondev.bakingapp.DetailFragment"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:scrollbarStyle="outsideInset"
            android:clipToPadding="false"
            android:scrollIndicators="top|bottom"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:isScrollContainer="false"
            android:fillViewport="false">

            <TextView
                android:id="@+id/recipe_detail_teks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textSize="16sp"
                android:padding="15dp"
                android:textColor="@color/cardview_dark_background" />

        </ScrollView>

    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_detail_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:scrollbars="vertical"/>

</LinearLayout>
