...
    android:layout_height="match_parent"
    tools:context="com.singletondev.bakingapp.RecipeDetailStepsFragment"
    android:orientation="vertical">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/simpleExoPlayer"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

   <android.support.v7.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
...
